# osrust

./: Cargo.toml  build.rs  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  binutil.rs  debug_utils.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  paging.rs  support.rs
kernel/src/acpi/: apic.rs  hpet.rs  init.rs  mod.rs  pcie.rs
kernel/src/interrupts/: pit.rs
kernel/src/klib/: linked_list.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs
kernel/src/memory/allocator/: buddy_allocator.rs  paged_pool.rs
kernel/src/memory/frame_allocator/: boot_info.rs  general_purpose.rs
src/: main.rs
